Fix avatar alignment

--- a/src/component/chat/ChatGroup.scss
+++ b/src/component/chat/ChatGroup.scss
@@ -104,7 +104,7 @@
 
 .avatar {
   position: absolute;
-  bottom: #{7/$font-size}rem;
+  bottom: #{5/$font-size}rem;
 
   svg {
     min-width: #{32/$font-size}rem;
